@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-Plugin-OurPkgVersion
 
 {{$NEXT}}
   - Fix bug where nw underscore_eval_version may fail
+  - add skip_main_module option for compatibility with VersionFromMainModule
 
 0.12      2017-07-11
   - Add underscore_eval_version property
